--- a/pages/edit/edit.wxml
+++ b/pages/edit/edit.wxml
@@ -5,34 +5,43 @@
         <view style='width:20%;margin-top:15rpx'>
           <text style='color: rgb(84, 84, 84);margin-left:10rpx;'>店铺名</text>
         </view>
-        <view style='width:80%;margin-top:15rpx;color: rgb(22, 22, 22);font-size:37rpx;border:1rpx solid rgb(220, 220, 220);padding-top:10rpx;padding-bottom:10rpx;width:60%;border-radius:10rpx;'>
-          <input placeholder-class="inputName" style='margin-left:10rpx;' placeholder="如:东朝茶叶-张三" bindblur="shopNameInput" value="{{shopName}}" />
+        <view class='inputShopName' style="{{openUserInfo?'':'display:none'}}">
+          <input placeholder-class="inputName" style='margin-left:10px;' focus="{{UserInfoStatus}}" placeholder="如:云风茶叶-张三" bindblur="shopNameInput" value="{{shopName}}" />
         </view>
-
+        <!-- <button open-type='getUserInfo' bindgetuserinfo="onGetUserInfoTap" class='userInfo'>一键获取</button> -->
+        <button open-type='getUserInfo' bindgetuserinfo="onGetUserInfoTap" class='userInfo2' style="{{openUserInfo?'display:none':''}}">
+         输入店铺名,如:云风茶叶-张三
+        </button>
       </view>
       <view class='phone'>
         <view style='width:20%;margin-bottom:15rpx'>
           <text style='color: rgb(84, 84, 84);margin-left:10rpx;'>电话</text>
         </view>
-        <view style='width:80%;margin-bottom:15rpx;color: rgb(22, 22, 22);font-size:37rpx;border:1rpx solid rgb(220, 220, 220);padding-top:10rpx;padding-bottom:10rpx;width:60%;border-radius:10rpx;'>
-          <input placeholder-class="inputName" style='margin-left:10rpx;' placeholder="请输入你的联系方式" bindblur="phoneInput" value="{{phone}}" />
+        <view class='inputPhone' style="{{openPhoneInfo?'':'display:none'}}">
+          <input placeholder-class="inputName" style='margin-left:10px;' focus="{{UserPhoneStatus}}" type="number" confirm-type="done" max-length="11" placeholder="请输入你的联系方式" bindblur="phoneInput" value="{{phone}}"/>
         </view>
+        <!-- <button open-type='getPhoneNumber' bindgetphonenumber="onPhoneNumberTap" class='phoneInfo'>一键获取</button> -->
+        <button open-type='getPhoneNumber' bindgetphonenumber="onPhoneNumberTap" class='userPhone2' style="{{openPhoneInfo?'display:none':''}}">
+         输入你的联系方式
+        </button>
       </view>
     </view>
     <view class='Inbody' style="{{flag?'':'display:none'}}">
-      <view style='font-weight: bold;color: rgb(22, 22, 22);font-size:18px;margin-left:70rpx;padding-top:25rpx;'>智能输入</view>
+      <view style='font-weight: bold;color: rgb(22, 22, 22);font-size:18px;margin-left:15px;padding-top:25rpx;'>智能输入</view>
       <view class='textarea'>
-        <textarea maxlength="-1" placeholder-class="textareaclass" style='padding:10rpx;' bindblur="bodyInput" placeholder="请将你需要发布的产品复制进来，系统智能识别" value="{{body}}" />
-
+        <textarea maxlength="-1" placeholder-class="textareaclass" style='padding:5px;height:100px;margin:20rpx;border:1rpx solid #dcdcdc;margin-bottom:80rpx;width:90%;' cursor-spacing="150" bindinput="bodyInput" placeholder="粘贴全部产品进来，系统智能识别 例:\n出旺世\n找勐海孔雀" value="{{body}}"
+        />
+        <view class='qingkong' wx-if="{{smartinput}}" catchtap='onClearupTap'>清空</view>
+        <view class='finish' style="{{smartinput?'background-color:red':''}}" catchtap='onSmartInputDoneTap'>完成</view>
       </view>
     </view>
     <view class='body' style="{{flag?'':'display:none'}}">
-      <view style='font-weight: bold;color: rgb(22, 22, 22);font-size:18px;margin-left:70rpx;padding-top:25rpx;'>普通输入</view>
+      <view style='font-weight: bold;color: rgb(22, 22, 22);font-size:18px;margin-left:15px;padding-top:12px;padding-bottom:10px;'>普通输入</view>
 
 
       <view class='products' wx:for="{{teaList}}" wx:for-index="index">
-        <view style='width:20%;display:flex;flex-direction:row;align-items: center;justify-content: flex-start;'>
-          <picker bindchange="bindPickerChange" bindcancel="bindCancelTap" catchtap='onClickTap' value="{{item.type-1}}" range="{{style}}" data-teaindex="{{index}}">
+        <view class='style'>
+          <picker style='margin-left:5px;width:100%' bindchange="bindPickerChange" bindcancel="bindCancelTap" catchtap='onClickTap' value="{{item.type-1}}" range="{{style}}" data-teaindex="{{index}}">
             <view style='display:flex;flex-direction:row;align-items: center;justify-content: flex-start;'>
               <text>{{style[item.type-1]}}</text>
               <view class="{{down?'triangleDown':'triangleUp'}}" style='margin-left:10rpx;'></view>
@@ -40,22 +49,22 @@
 
           </picker>
         </view>
-        <view style='width:53%;color: rgb(22, 22, 22);font-size:37rpx;border:1rpx solid rgb(220, 220, 220);padding-top:10rpx;padding-bottom:10rpx;border-radius:10rpx;'>
+        <view class='editinput'>
           <input placeholder-class="{{flag?'':'fontclass'}}" style='margin-left:10rpx;' placeholder="请输入名称" bindblur="teaInput" value="{{item.name}}" data-teaindex="{{index}}" />
         </view>
         <view style='display:flex;align-items: center;justify-content: center;'>
-          <image style='height:35rpx;width:30rpx;margin-left:8rpx;' src='/images/icons/delete.png' catchtap='onDeleteTap' data-teaindex="{{index}}"></image>
-          <text style='color:#4faffe;font-size:30rpx;margin-left:10rpx;' bindtap="onMoreTap" data-teaindex="{{index}}">更多</text>
+          <image style='height:22px;width:17px;margin-left:7px;' src='/images/icons/delete.png' catchtap='onDeleteTap' data-teaindex="{{index}}"></image>
+          <text style='color:#4faffe;font-size:17px;margin-left:8px;' bindtap="onMoreTap" data-teaindex="{{index}}">更多</text>
         </view>
       </view>
 
 
     </view>
-    <view class='add' catchtap='addTeaTap'>
-      <image style='height:80rpx;width:80rpx;' src='/images/icons/add2.png'></image>
+    <view class='add'>
+      <image catchtap='addTeaTap' style='height:80rpx;width:80rpx;' src='/images/icons/add2.png'></image>
     </view>
   </view>
-
+  <view style='font-size:10px;color:#868383;padding-left:20px;margin-top:20rpx;'>提示:名称不超过10字效果最好,点击更多录入价格,数量等信息</view>
   <view class='confirmcel'>
     <view class='cancel' catchtap='onPreviewTap'>预览效果</view>
     <view class='confirm' catchtap='onConfirmTap'>发布</view>
@@ -82,18 +91,25 @@
       </view>
 
       <view style='display:flex;flex-direction:row;padding:5px 45rpx 10rpx 30px;align-items: center;justify-content:center'>
+        <text style='color: rgb(84, 84, 84);margin-left:10rpx;'>单位</text>
+        <view style='width:70%;color: rgb(22, 22, 22);font-size:37rpx;border:1rpx solid rgb(220, 220, 220);padding-top:10rpx;padding-bottom:10rpx;border-radius:10rpx;margin-left:50rpx;'>
+          <input style='margin-left:10rpx;' placeholder="如:件/提" bindblur="onModalUnitInput" value="{{chooseTea.unit}}" />
+        </view>
+      </view>
+
+      <view style='display:flex;flex-direction:row;padding:5px 45rpx 10rpx 30px;align-items: center;justify-content:center'>
         <text style='color: rgb(84, 84, 84);margin-left:10rpx;'>价格</text>
         <view style='width:70%;color: rgb(22, 22, 22);font-size:37rpx;border:1rpx solid rgb(220, 220, 220);padding-top:10rpx;padding-bottom:10rpx;border-radius:10rpx;margin-left:50rpx;'>
           <input style='margin-left:10rpx;' placeholder="请输入价格" bindblur="onModalPriceInput" value="{{chooseTea.price}}" />
         </view>
       </view>
-      <view class='onoffline'>
+      <!-- <view class='onoffline'>
         <radio-group class="radio-group" bindchange="radioChange">
           <label class="radio" wx:for="{{items}}">
             <radio color="#4faffe" value="{{item.value}}" checked="{{item.checked}}" />{{item.name}}
           </label>
         </radio-group>
-      </view>
+      </view> -->
       <view class='confirmcel'>
         <view class='modelcancel' catchtap='onModalCancelTap'>取消</view>
         <view class='confirm' catchtap='onModalConfirmTap'>确定</view>
