--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -9,7 +9,7 @@
           <view class="weui-search-bar_form">
             <view class="weui-search-bar_box">
               <icon class="weui_icon-search_in-box" type="search" size="14"></icon>
-              <input type="text" class="weui-search-bar_input" confirm-type="search" placeholder="搜索" value="{{inputVal}}" focus="{{inputShowed}}" bindblur="inputTyping" />
+              <input type="text" class="weui-search-bar_input" confirm-type="search" placeholder="搜索" value="{{inputVal}}" focus="{{inputShowed}}" bindblur="inputTyping" bindinput="checkinputTyping" />
               <view class="weui_icon-clear" wx:if="{{inputVal.length > 0}}" bindtap="clearInput">
                 <icon type="clear" size="14"></icon>
               </view>
@@ -19,19 +19,29 @@
               <view class="weui-search-bar_text">搜索</view>
             </label>
           </view>
-          <view class="weui-search-bar_cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">取消</view>
+          <view class="weui-search-bar_cancel-btn" hidden="{{!inputShowed}}" bindtap="onSearchTap">搜索</view>
         </view>
       </view>
     </view>
   </view>
+  <view class='number' wx-if="{{search}}">
+    <view class='chu'>
+      <text  style='color:red'>{{sellCount}}</text>
+      <text>人出</text>
+    </view>
+    <view class='zhao'>
+      <text style='color:red'>{{buyCount}}</text>
+      <text>人找</text>
+    </view>
 
-  <scroll-view style='padding-bottom:150rpx;' scroll-top="{{scrollTop}}" scroll-y="true" style="height:{{scrollHeight}}px;" bindscrolltolower="bindDownLoad" bindscrolltoupper="topLoad" bindscroll="scroll">
+  </view>
+  <view style='padding-bottom:150rpx;'>
     <view wx:if="{{publishList.length>0}}" class='body' wx:for="{{publishList}}" wx:for-item="objs" wx:for-index="index">
       <view style='border-bottom:1rpx solid rgb(220, 220, 220)'>
         <view class='bodymsg'>
           <view class='bodyname'>
-            <image class='nameImg' src='/images/icons/avatar2.jpeg'></image>
-            <text style='margin-left:20rpx;'>{{objs.name}}</text>
+            <image class='nameImg' src="{{objs.wxUser.avatarUrl==null?'/images/icons/avatar2.jpeg':objs.wxUser.avatarUrl}}"></image>
+            <text style='margin-left:20rpx;' catchtap='onBodyTap' data-requireid="{{objs.id}}" data-ortheruserid = "{{objs.wxUser.id}}">{{objs.name}}</text>
           </view>
           <view class='loaction'>
             <view class='time'>
@@ -44,7 +54,6 @@
             </view>
           </view>
           <view class='star'>
-            <!-- <image style='height:100rpx;width:100rpx;' src='/images/icons/star_l.png'></image> -->
             <image wx:if="{{objs.like}}" style='height:100rpx;width:100rpx;' src='/images/icons/star_l.png'></image>
             <image wx:if="{{!objs.like}}" style='height:100rpx;width:100rpx;' src='/images/icons/star.png'></image>
           </view>
@@ -54,33 +63,46 @@
 
       <view style='margin-top:10px;'>
         <!-- <view>{{index}}</view> -->
-        <view class='bodyproducts' wx:for="{{objs.objects}}" wx:for-item="obj">
+        <view class='bodyproducts' wx:for="{{objs.objects}}" wx:for-item="obj" catchtap='onBodyTap' data-requireid="{{objs.id}}" data-ortheruserid = "{{objs.wxUser.id}}">
           <view class='bodyclassify'>
             <text class='bodyclassifyValue' style="{{obj.style==1?'border: 1rpx solid #fd7995;color:#fd7995':''}}">{{obj.classify}}</text>
           </view>
           <view class='product'>
-            <view class='name' wx:for="{{obj.object}}" wx:for-item='product'>
-              <view>{{product.name}}</view>
+            <view class='name' wx:for="{{obj.object}}" wx:for-item='product' wx:for-index="productindex">
+              <!-- <view>{{product.name}}</view> -->
+              <view wx-if="{{productindex<15}}" style='display:flex;'>
+                <text>{{product.name}}</text>
+                <text style='font-weight:300;margin-left:5px;letter-spacing:2px' wx:if="{{product.count>0}}">X{{product.count}}{{product.unit}}</text>
+                <view class="money-wrapper">
+                  <text style='font-weight:300;color: #EC820E;margin-left:20px;letter-spacing:1px;' wx:if="{{product.price}}">￥{{product.price>10000?(product.price/10000):product.price}}</text>
+                  <text style='font-weight:300;color: #EC820E;letter-spacing:1px;' wx:if="{{product.price>10000}}">万</text>
+                </view>
+              </view>
             </view>
           </view>
         </view>
+        <view class='checkmore' wx-if="{{objs.maxLength}}" catchtap='onCheckMoreTap' data-id="{{objs.id}}">查看全部({{objs.length}}条)</view>
         <view class='count'>
-          <view style='width:50%;'>
+          <view style='width:38%;'>
             <text>浏览 {{objs.visitCount}}</text>
-            <text style='margin-left:20rpx;'>收藏 {{objs.likeCount}}</text>
+            <text style='margin-left:20rpx;'>关注 {{objs.likeCount}}</text>
+          </view>
+          <view class='chat' catchtap='onBodyTap' data-requireid="{{objs.id}}" data-ortheruserid = "{{objs.wxUser.id}}">
+            <image src='/images/icons/chat2.png' style='height:35rpx;width:35rpx;'></image>
+            <text style='font-size:22rpx;margin-left:5rpx;'>私信ta</text>
           </view>
 
           <view class='contact' catchtap='onPhoneTap' data-phone="{{objs.phone}}">
-            <image style='height:30rpx;width:30rpx;' src='/images/icons/电话.png'></image>
+            <image style='height:30rpx;width:30rpx;' src='/images/icons/phone3.png'></image>
             <text style='margin-right:30rpx;margin-left:10rpx;'>{{objs.phone}}</text>
           </view>
         </view>
       </view>
     </view>
-    <view wx:if="{{publishList.length==0}}" class='nodata'>
+    <!-- <view wx:if="{{publishList.length==0}}" class='nodata'>
       <text>暂时没有数据</text>
-    </view>
-  </scroll-view>
+    </view> -->
+  </view>
   <view class="body-view">
     <loading hidden="{{hidden}}" bindchange="loadingChange">
       加载中...
