--- a/pages/edit/edit.wxss
+++ b/pages/edit/edit.wxss
@@ -1,15 +1,18 @@
+page {
+  background-color: #f0f2f7;
+}
+
 .editCon {
   display: flex;
   background-color: #f0f2f7;
   flex-direction: column;
-   /* height: 100%;  */
-  width: 100%;
+  /* height: 100%;  *//* width: 100%; */
 }
 
 .msg {
   margin-top: 7px;
-  width: 100%;
-  height: 105px;
+  /* width: 100%; */
+  height: 110px;
   background-color: white;
 }
 
@@ -21,17 +24,19 @@
 .shopName {
   /* width: 100%; */
   height: 50%;
-  padding-left: 70rpx;
+  padding-left: 50rpx;
   display: flex;
   align-items: center;
+  position:relative;
 }
 
 .phone {
   /* width: 100%; */
   height: 50%;
-  padding-left: 70rpx;
+  padding-left: 50rpx;
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .body {
@@ -40,8 +45,7 @@
   background-color: white;
 }
 
-.products {
-  /* width: 100%; */
+/* .products {
   height: 50%;
   padding-left: 70rpx;
   display: flex;
@@ -49,6 +53,13 @@
   padding-top: 25rpx;
   padding-bottom: 25rpx;
   border-bottom: 1rpx solid rgb(220, 220, 220);
+} */
+
+.products {
+  /* width: 100%; *//* height: 50%; *//* padding-left: 70rpx; */
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
 }
 
 /* .func {
@@ -126,7 +137,7 @@
 .tarBar {
   position: fixed;
   bottom: 0;
-  width: 100%;
+  /* width: 100%; */
   height: 50px;
   background-color: white;
   display: flex;
@@ -139,8 +150,7 @@
 .publish {
   position: fixed;
   bottom: 0;
-  width: 100%;
-  z-index: 10;
+  /* width: 100%; *//* z-index: 10; */
 }
 
 .confirmcel {
@@ -155,12 +165,13 @@
   font-size: 38rpx;
   color: white;
   width: 300rpx;
-  height: 100rpx;
+  height: 90rpx;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 10rpx;
   margin-left: 30rpx;
+  font-weight: 300;
 }
 
 .cancel {
@@ -168,12 +179,13 @@
   font-size: 38rpx;
   color: white;
   width: 300rpx;
-  height: 100rpx;
+  height: 90rpx;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 10rpx;
   margin-left: 60rpx;
+  font-weight: 300;
 }
 
 .add {
@@ -189,6 +201,9 @@
   border-right: 5px solid transparent;
   border-bottom: 5px solid #555;
   width: 0;
+  position: absolute;
+  right: 11rpx;
+  top: 15px;
 }
 
 .triangleDown {
@@ -196,22 +211,27 @@
   border-right: 5px solid transparent;
   border-top: 5px solid #555;
   width: 0;
+  position: absolute;
+  right: 11rpx;
+  top: 15px;
 }
 
 .textarea {
-  border: 1rpx solid rgb(220, 220, 220);
-  margin-left: 70rpx;
+  /* border: 1rpx solid #dcdcdc;  */
+  margin-left: 20rpx;
   margin-top: 20rpx;
-  margin-right: 70rpx;
-  border-radius: 10rpx;
+  margin-right: 20rpx;
+  /* border-radius: 10rpx; */
+  position: relative;
   /* padding-bottom:35px; */
 }
 
 .Inbody {
   margin-top: 7px;
-  width: 100%;
+  /* width: 100%; */
   background-color: white;
   padding-bottom: 25rpx;
+  padding-top: 10px;
 }
 
 /* pages/bottompop/bottompop.wxss */
@@ -303,9 +323,134 @@
 }
 
 .inputName {
-  font-size: 30rpx;
+  font-size: 15px;
 }
 
 .textareaclass {
   font-size: 32rpx;
+  min-height: 100px;
+  color: rgb(171, 171, 171);
+  /* width: 100%; *//* padding: 5rpx; */
+}
+
+.style {
+  width: 20%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  border: 1rpx solid rgb(220, 220, 220);
+  position: relative;
+  margin: 4px;
+  padding: 16rpx 10rpx;
+  border-radius: 5px;
+}
+
+.editinput {
+  width: 52%;
+  color: rgb(22, 22, 22);
+  font-size: 37rpx;
+  border: 1rpx solid rgb(220, 220, 220);
+  padding-top: 6px;
+  padding-bottom: 6px;
+  border-radius: 10rpx;
+}
+
+.finish {
+  margin-top: 10px;
+  /* position: absolute; */
+  color: white;
+  font-size: 30rpx;
+  padding: 15rpx 0rpx;
+  background-color: #dcdcdc;
+  width: 150rpx;
+  text-align: center;
+  position: absolute;
+  right: 14px;
+  top: 112px;
+}
+
+.qingkong {
+  margin-top: 10px;
+  color: red;
+  font-size: 30rpx;
+  padding: 15rpx 0rpx;
+  width: 150rpx;
+  text-align: right;
+  position: absolute;
+  right: 102px;
+  top: 112px;
+  font-weight: 300;
+}
+
+.userInfo {
+  font-size: 11px;
+  margin-top: 6px;
+  height: 70rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #00a0e9;
+  color: white;
+  font-weight: 300;
+}
+
+.userInfo2 {
+  width: 480rpx;
+  position: absolute;
+  left: 187rpx;
+  height: 85rpx;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  font-size: 28rpx;
+  color: rgb(171, 171, 171);
+  margin-top: 10rpx;
+}
+.userPhone2{
+  width: 480rpx;
+  position: absolute;
+  left: 187rpx;
+  height: 85rpx;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  font-size: 28rpx;
+  color: rgb(171, 171, 171);
+  /* margin-top: 5rpx; */
+}
+.phoneInfo {
+  font-size: 11px;
+  /* margin-top:6px; */
+  height: 70rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #00a0e9;
+  color: white;
+  font-weight: 300;
+  position: absolute;
+  top: 6rpx;
+  right: 15rpx;
+}
+
+.inputShopName {
+  width: 480rpx;
+  margin-top: 15rpx;
+  color: rgb(22, 22, 22);
+  font-size: 37rpx;
+  border: 1rpx solid rgb(220, 220, 220);
+  padding-top: 6px;
+  padding-bottom: 6px;
+  border-radius: 10rpx;
+}
+.inputPhone{
+  width:480rpx;
+  margin-bottom:15rpx;
+  color: rgb(22, 22, 22);
+  font-size:37rpx;
+  border:1rpx solid rgb(220, 220, 220);
+  padding-top:6px;
+  padding-bottom:6px;
+  border-radius:10rpx;
 }
