--- a/pages/homepage/homepage.wxss
+++ b/pages/homepage/homepage.wxss
@@ -1,8 +1,12 @@
+page {
+  background-color: #f0f2f7;
+}
+
 .hpContrainer {
   background-color: #eff0f6;
   flex-direction: column;
   color: rgb(240, 242, 247);
-  /* height: 100%; */
+  /* height: 100%;  */
 }
 
 .productList {
@@ -42,6 +46,7 @@
   position: absolute;
   background-color: #34daa4;
   color: white;
+  border-radius: 5rpx;
 }
 
 .classifyValue {
@@ -72,8 +77,11 @@
 .name {
   /* width:50%; */
   text-align: left;
-  font-size: 30rpx;
+  font-size: 35rpx;
   color: rgb(84, 84, 84);
+  display: flex;
+  position: relative;
+  /* justify-content:space-between; */
 }
 
 .phoneView {
@@ -89,7 +97,7 @@
   background-color: #4faffe;
   padding: 8px;
   width: 160px;
-  height: 30px;
+  height: 27px;
   border-radius: 50rpx;
   letter-spacing: 1px;
   font-size: 32rpx;
@@ -98,16 +106,28 @@
 }
 
 .searchCon {
-  background-color: white;
+  /* background-color: white; */
+  background-color: #4eaefe;
   display: flex;
   align-items: center;
   padding: 30rpx 30rpx;
   border-bottom: 1rpx solid #f8f8f8;
 }
 
-.avatar {
-  height: 70rpx;
-  width: 70rpx;
+.AvatarUrl {
+  height: 88rpx;
+  width: 88rpx;
+  border-radius: 50%;
+  background-color: white;
+  padding-top: 6rpx;
+  padding-left: 5rpx;
+  margin-left: 5rpx;
+  /* margin-top: 10rpx; */
+}
+
+.Avatar {
+  width: 85rpx;
+  height: 85rpx;
   border-radius: 50%;
   display: block;
   overflow: hidden;
@@ -116,13 +136,14 @@
 .search {
   display: flex;
   flex-direction: row;
-  border: 1rpx solid #e0e0e0;
+  /* border: 1rpx solid #e0e0e0; */
   align-items: center;
-  padding: 8rpx;
+  padding: 10rpx;
   margin-left: 40rpx;
   border-radius: 8rpx;
   width: 78%;
-  color: rgb(140, 140, 140);
+  color: black;
+  background-color: white;
 }
 
 .input {
@@ -174,6 +195,7 @@
   align-items: center;
   /* font-weight: 400; */
   color: #161616;
+  width: 80%;
 }
 
 .loaction {
@@ -210,21 +232,27 @@
   margin-top: 10rpx;
   margin-left: 5rpx;
   position: absolute;
-  /* position: absolute; */
+  border: 1rpx solid #34daa4;
+  color: #34daa4;
+  width: 40px;
+  height: 20px;
+  border-radius: 5rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .bodyclassifyValue {
-  border: 1rpx solid #34daa4;
+  /* border: 1rpx solid #34daa4; */
   font-size: 25rpx;
-  padding: 5rpx;
+  /* padding: 5rpx;  */
   border-radius: 8rpx;
-  color: #34daa4;
-  /* margin: 20rpx 40rpx; */
+  /* color: #34daa4; *//* margin: 20rpx 40rpx; */
 }
 
 .bodyproducts {
   padding: 5rpx 10rpx;
-  display: flex;
+  /* display: flex; */
   flex-direction: row;
   padding-left: 30rpx;
   position: relative;
@@ -249,20 +277,33 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  width: 50%;
+  width: 40%;
+  margin-left: 25rpx;
 }
 
 .star {
   position: absolute;
   top: 1rpx;
   right: 50rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
 }
-
+.starll{
+  /* display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center; */
+  position: relative;
+}
+.attention{
+  color:black;font-size:28rpx;font-weight:300
+}
 .tarBar {
   position: fixed;
   bottom: 0;
   width: 100vw;
-  height: 50px;
+  height: 100rpx;
   background-color: white;
   display: flex;
   flex-direction: row;
@@ -291,4 +332,49 @@
   height: 800rpx;
   font-size: 36rpx;
   color: rgb(104, 104, 104);
+}
+
+.left {
+  display: flex;
+  width: 40%;
+}
+
+.right {
+  display: flex;
+  width: 40%;
+}
+
+.money-wrapper {
+  position: absolute;
+  left: 174px;
+}
+
+.checkmore {
+  color: #4eaefe;
+  font-weight: 300;
+  font-size: 16px;
+  text-align: right;
+  margin-right: 20px;
+}
+
+.number {
+  background-color: red;
+  color: white;
+  height: 28rpx;
+  padding: 2rpx 8rpx;
+  border-radius: 10rpx;
+  font-size: 20rpx;
+  position: absolute;
+  left: 38rpx;
+}
+
+.message {
+  display: flex;
+  position: relative;
+}
+
+.chat {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
